<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.addJournal"
    style="@style/SCREEN"
    >

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/_50sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:clipToPadding="false"
        android:contentDescription="@string/scroll"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            >
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                app:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <ImageView
                android:id="@+id/imageSave"
                android:layout_width= "@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background = "@drawable/background_done_button"
                android:contentDescription="@string/addjournal1"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:tint="@color/colorIcons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"

                />

            <EditText
                android:id="@+id/inputJournal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:importantForAutofill="noExcludeDescendants"
                android:includeFontPadding="false"
                android:inputType="text"

                style="@style/TEXT"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                />

            <TextView
                android:id ="@+id/textDateTime"
                android:layout_width ="0dp"
                android:layout_height="wrap_content"
                android:fontFamily = "@font/ubuntu_regular"
                android:includeFontPadding="false"
                style="@style/TEXT"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/inputJournal"
                app:layout_constraintTop_toBottomOf="@id/inputJournal"
                app:layout_constraintStart_toStartOf="@id/inputJournal"
                />

            <EditText
                android:id="@+id/inputSubtitle"
                style="@style/TEXT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/subtitle"
                android:importantForAutofill="noExcludeDescendants"
                android:includeFontPadding="false"
                android:inputType="text|textMultiLine"
                android:minHeight="48dp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/textDateTime" />

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputSubtitle"
                />

            <ImageView
               android:id="@+id/imageJournal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/inputSubtitle"
                />

    <ImageView
        android:id ="@+id/removeImage"
        android:layout_width="@dimen/_25sdp"
        android:layout_height = "@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:contentDescription="delete"
        android:background="@drawable/background_delete"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_delete"
        android:visibility="gone"
        app:tint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@id/imageJournal"
        app:layout_constraintTop_toTopOf="@id/imageJournal"
        />

            <EditText
                android:id="@+id/inputJournalNote"
                style="@style/TEXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_your_journal_here"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="text|textMultiLine"
                android:lineSpacingExtra="4sp"
                android:minHeight="@dimen/_100sdp"
                android:textAlignment="textStart"
                android:textColorHint="@color/colorTextHint"

                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageJournal" />

            <TextView
                android:id="@+id/tfLabel"
                style="@style/TEXT"
                android:layout_width="60dp"
                android:layout_height="16dp"
                android:layout_marginStart="111dp"
                android:layout_marginEnd="134dp"
                android:layout_marginBottom="26dp"

                android:hint="Add"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/inputJournal"
                app:layout_constraintEnd_toStartOf="@+id/imageSave"
                app:layout_constraintStart_toEndOf="@+id/imageBack" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        </ScrollView>

        <include layout="@layout/layout_miscellaneous"

            />


</androidx.coordinatorlayout.widget.CoordinatorLayout>